compiler-core/src/parse/snapshots/rakun_core__parse__tests__invalid_label_shorthand_2.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 1280
expression: "\npub fn main() {\n  wibble(:,)\n}\n"
---
----- SOURCE CODE

pub fn main() {
  wibble(:,)
}


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:3:10
  │
3 │   wibble(:,)
  │          ^ I was not expecting this

Found `:`, expected one of: 
- `)`
